--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "ashmita",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.6",
     "express": "^4.21.1"
   },
   "devDependencies": {
